welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:12: error: type mismatch;
 found   : Unit
 required: Boolean
			droite()
                              ^SnakeBuggle:25: error: type mismatch;
 found   : Unit
 required: Boolean
			gauche()
                              ^